# cppcon-cmake

./: CMakeLists.txt  CMakePresets.json  COPYING  vcpkg.json
.github/workflows/: main.yml
cmake/: xorshift-config.cmake
include/: xorshift.hpp
sample/: sample.cpp
